@@ -48,6 +48,7 @@ public class DropdownMenu extends HBox {
     private final ImageView defaultIcon, activeIcon;
     @Getter
     private final BooleanProperty isMenuShowing = new SimpleBooleanProperty(false);
+    @Getter
     private final ContextMenu contextMenu = new ContextMenu();
     @Getter
     private final HBox hBox = new HBox();
@@ -177,7 +178,7 @@ public class DropdownMenu extends HBox {
             updateIcon(activeIcon);
             isMenuShowing.setValue(true);
             if (prefWidth != null && !contextMenu.getItems().isEmpty()
-                    && contextMenu.getItems().get(0) instanceof DropdownMenuItem) {
+                    && contextMenu.getItems().getFirst() instanceof DropdownMenuItem) {
                 updateMenuItemWidth();
             }
         });
